# data_source_scrapper

./: .env.example  .gitignore  DOCUMENTATION.md  QUICK_START_SCREENSHOTS.md  README.md  SCREENSHOT_SETUP.md  bece_questions.csv  bece_questions.json  generate_reports.py  image_download_report.txt  image_downloader.py  main.py  pyproject.toml  restructure_questions.py  run_spider.py  update_all_metadata.py
.kiro/specs/screenshot-pdf-integration/: design.md  requirements.md  tasks.md
config/: __init__.py  logging_config.py  screenshot_config.py
core/: __init__.py  generate_reports.py  restructure_questions.py
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  QUICK_START_SCREENSHOTS.md  SCREENSHOT_INTEGRATION.md  SCREENSHOT_SETUP.md  TESTING.md
services/: __init__.py  pdf_storage_service.py  screenshot_service.py  screenshot_storage_service.py  screenshot_workflow.py
